# company-quickcheck

./: .gitignore  CONTINUE_HERE.md  README.md  SESSION-2026-07-18.md  SESSION_SUMMARY.md  audit_report.md  autonomous_batch.py  pyproject.toml  requirements.txt  setup.py  test_input.xlsx  test_output.xlsx
.planning/: ROADMAP.md  SPEC.md  STATE.md  stealth-core-integration-plan.md
company_quickcheck/: __init__.py  __main__.py  ajs_exclusions.py  api.py  cli.py  config.py  core.py  correlation.py  correlation_rules.json  rate_limiter.py
company_quickcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: companies_checked.xlsx  stealth_core.db
progress/: batch_150_549_checkpoint.json  batch_150_549_checkpoint.xlsx  batch_550_999_checkpoint.json  companies_0_549.xlsx  companies_550_999.xlsx
references/: CORRELATION-ENHANCEMENT.md  CORRELATION_PLAN.md
scripts/: firmen_quickcheck.py  merge_batches.py
tests/: test_ajs_exclusions.py  test_api.py  test_autonomous_batch.py  test_cli.py  test_config.py  test_core.py  test_correlation.py  test_fixes.py  test_merge_batches.py  test_rate_limiter.py
