[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "company-quickcheck"
version = "1.3.0"
description = "Batch Austrian company status checker using opendata.host API"
readme = "README.md"
authors = [{name = "Hermes Agent", email = "hermes-pi@raspberrypi.local"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["austria", "company", "check", "opendata"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
"company-quickcheck" = "company_quickcheck.cli:main"

[tool.setuptools.packages.find]
include = ["company_quickcheck*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/venv/*", "*/tests/*"]